IBX-7468: Z-index issue with pop-ups in RTE fields

--- a/src/bundle/Resources/public/scss/_general.scss
+++ b/src/bundle/Resources/public/scss/_general.scss
@@ -287,4 +287,8 @@
         max-height: calculateRem(300px);
         overflow-y: auto;
     }
+
+    .ck-body-wrapper &.ck-balloon-panel {
+        z-index: calc(var(--ck-z-modal) + 100);
+    }
 }
